fix overflow

--- a/css/global.css
+++ b/css/global.css
@@ -425,3 +425,7 @@ video {
     padding: 0;
     z-index: 100000;
 }
+
+html {
+    overflow: hidden;
+}
